test/valid/58168_sumTwoNumbers/sumTwoNumbers.agu
-- Author: 58168, Henrique Costa Vale

let sum(a,b) : (Int , Int) -> Int =
  let c : Int = a + b ;
  c

let main(_) : Unit -> Unit =
  print(sum(5,5))