test/invalid-syntax/58168_noBracketsFunc/58168_noBracketsFunc.agu
-- Author: 58168, Henrique Costa Vale

let f(a,b) : ( Int , Int -> Int
    let s : Int = a + b
    s
